Onboarding: Fix alignment of container on benefits screen. (https://github.com/woocommerce/woocommerce-admin/pull/4837)

--- a/plugins/woocommerce-admin/client/profile-wizard/style.scss
+++ b/plugins/woocommerce-admin/client/profile-wizard/style.scss
@@ -85,6 +85,10 @@
 			margin-right: auto;
 		}
 
+		&.benefits {
+			text-align: center;
+		}
+
 		@include breakpoint( '<782px' ) {
 			padding-left: $gap;
 			padding-right: $gap;
